# buster-suite

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package-lock.json  package.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
buster/: .gitignore  README.md  index.html  package-lock.json  package.json  vitest.config.ts
buster-collab-server/src/: crdt.ts  document.ts
buster-collab-server/tests/: crdt.test.ts  document.test.ts
buster-dap/src/: events.rs
buster-ext-template/src/: dev-server.ts
buster-lsp-manager/: Cargo.toml
buster-lsp-manager/src/: types.rs
buster-path/: package.json
buster-path/src/: git.ts  workspace.ts
buster-path/tests/: breadcrumb.test.ts  compare.test.ts  uri.test.ts
buster-sandbox/: Cargo.toml
buster-sandbox/src/: config.rs  error.rs  executor.rs  lib.rs  policy.rs
buster-sandbox/tests/: sandbox_test.rs
buster-terminal-pro/: Cargo.toml
buster-terminal-pro/src/: lib.rs  pty_monitor.rs  sixel.rs
buster-test-harness/: README.md  package.json  vite.config.ts
buster-test-harness/src/: assertions.ts  extension-tests.ts  fixtures.ts  index.ts  lsp-tests.ts  runner.ts  security-tests.ts  tauri-runner.ts
buster-test-harness/tests/: assertions.test.ts  fixtures.test.ts  runner.test.ts
buster-website/: .cta.json  README.md  buster-mom-landing-page.md  index.html  main.js  package.json  style.css
buster-website/src/: main.ts
buster/benchmarks/: baselines.json
buster/growth/: BUSTER_CODE_REVIEW_2026-04-09.md  ide-readiness-review.md
buster/src/: App.tsx  index.tsx
buster/src-tauri/: Cargo.toml
buster/src-tauri/icons/: icon.icns
buster/src-tauri/src/: browser.rs  lib.rs  watcher.rs  workspace.rs
buster/src-tauri/src/ai/: agent.rs  audit.rs  mod.rs  tools.rs
buster/src-tauri/src/collab/: crdt.rs  mod.rs
buster/src-tauri/src/commands/: ai.rs  browser.rs  extensions.rs  file.rs  filebuffer.rs  git.rs  github.rs  lsp.rs  mod.rs  session.rs  settings.rs  syntax.rs  terminal.rs
buster/src-tauri/src/debugger/: client.rs  mod.rs
buster/src-tauri/src/extensions/: manifest.rs  mod.rs  runtime.rs  surface.rs
buster/src-tauri/src/lsp/: client.rs  mod.rs
buster/src-tauri/src/remote/: mod.rs
buster/src-tauri/src/syntax/: mod.rs
buster/src-tauri/src/terminal/: mod.rs
extensions/buster-format/: Cargo.toml  extension.wasm
growth/: ROADMAP.md  bug-fix-roadmap-2026-04-19.md  documentation.md  introduction.md  lua-vim-keymap-roadmap.md  roadmap-ai-completion.md  roadmap-code-editor.md  roadmap-terminal.md  terminal-roadmap-2026-04-19.md
growth/daily-summary/: 2026-04-06.md  2026-04-07.md  2026-04-08.md  2026-04-09.md  2026-04-11.md  2026-04-12.md  2026-04-13.md  2026-04-14.md  2026-04-24.md  2026-04-28.md
growth/old-maps/: bug-fix-roadmap-2026-04-19.md  roadmap-ai-completion.md  roadmap-code-editor.md
growth/past-deep-thoughts/: ROADMAP.md  mobile-native.md  supporting-projects.md
growth/research/: Sketcher-Brainstorm.md  release-roadmap.md
leftovers/: remaining-work.md
src/: App.tsx  test-setup.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/dap/: Cargo.toml
src-tauri/crates/dap/src/: adapter.rs  breakpoint.rs  cleanup.rs  config.rs  events.rs  lib.rs  protocol.rs  types.rs  watchpoint.rs
src-tauri/defaults/: keymap.lua
src-tauri/resources/: browser.wasm
src-tauri/src/: browser.rs  browser_module.rs  filebuffer.rs  (+3 more)
(+317 files in other folders)
