[package]
name = "buster-lsp-manager"
version = "0.1.0"
edition = "2021"
description = "Production LSP client library for the Buster IDE — incremental sync, crash recovery, server lifecycle management"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"
thiserror = "2"
log = "0.4"

[dev-dependencies]
