[package]
name = "buster-terminal-pro"
version = "0.1.0"
edition = "2021"
description = "Hardened terminal emulator for the Buster IDE — themes, crash recovery, hyperlinks, CJK support, scrollback management"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
