[package]
name = "buster-dap"
version = "0.1.0"
edition = "2021"
description = "Debug Adapter Protocol manager for the Buster IDE — adapter registry, launch configs, event forwarding, safe threading"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
log = "0.4"
